tests/baselines/reference/interfaceWithPropertyThatIsPrivateInBaseType2.errors.txt
==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithPropertyThatIsPrivateInBaseType2.ts (2 errors) ====
    class Base {
        private x() {}
    }
    
    interface Foo extends Base { // error
              ~~~
!!! error TS2429: Interface 'Foo' incorrectly extends interface 'Base':
!!! error TS2429:   Private property 'x' cannot be reimplemented.
        x(): any;
    }
    
    class Base2<T> {
        private x() { }
    }
    
    interface Foo2<T> extends Base2<T> { // error
              ~~~~
!!! error TS2429: Interface 'Foo2<T>' incorrectly extends interface 'Base2<T>':
!!! error TS2429:   Private property 'x' cannot be reimplemented.
        x(): any;
    }